--- a/trakberry/templates/scrap_mgmt24.html
+++ b/trakberry/templates/scrap_mgmt24.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
-<table class="center">
+<table id="scrap_display">
 	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Last 24hrs Scrap Summary</b></u></font></th></tr>
 
 	<font size ="2" style="color:rgb(100, 100, 100)">
