--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -40,11 +40,11 @@
 	tr{width: 100%; background-color: #fafafa;}
 	tr:nth-child(even){background-color: #dae0c8;}
 
-	.frame8 {color:black;text-align:center;float:left;width:60%}
+	.frame8 {color:black;text-align:left;float:left;width:60%}
 	.frame9{color:black;text-align:center;float:left;width:35%;position:relative;left:5px;}
 	.frame5 {color:black;text-align:center;float:center;width:80%}
-
-	.frame1 {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:40%}
+	.frame1x {color:black;text-align:left;background:#849185;float:left;width:30%}
+	.frame1 {color:black;text-align:left;background:#849185;float:left;width:40%}
 	.frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:30%;position:relative;left:5px;}
 	.frame3{color:black;text-align:center;background:rgb(42, 165, 83);float:left;width:25%;position:relative;left:10px;}
 	.frame4{color:black;text-align:center;background:rgb(165, 116, 42);float:left;width:15%}
@@ -117,6 +117,77 @@
 	}
 	}
 	</style>
+
+<style>
+
+	#scrap_edit {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 50%;
+	}
+	#scrap_edit td, #scrap_edit th {
+		border: 1px solid rgb(136, 134, 134);
+		text-align: left;
+		padding: 8px;
+	}
+	#scrap_edit tr:nth-child(even){background-color: #f8ce96;}
+	#scrap_edit tr:nth-child(odd){background-color: #e29d4e;}
+	#scrap_edit tr:hover {background-color: #ddd;}
+	#scrap_edit th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: rgb(139, 117, 107);
+		color: white;
+	}
+	
+	</style>
+
+
+<style>
+
+	#scrap_display {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 70%;
+	}
+	#scrap_display td, #scrap_display th {
+		border: 1px solid rgb(136, 134, 134);
+		padding: 8px;
+	}
+	#scrap_display tr:nth-child(even){background-color: #fafafa;}
+	#scrap_display tr:nth-child(odd){background-color: #dae0c8;}
+	#scrap_display tr:hover {background-color: #ddd;}
+	#scrap_display th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: #a8b4a9;
+		color: white;
+	}
+	</style>
+
+<style>   
+	#scrap_cat {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 40%;
+	}
+	#scrap_cat td, #scrap_cat th {
+		border: 1px solid rgb(136, 134, 134);
+		padding: 4px;
+	}
+	/* #prodsum tr:nth-child(even){background-color: #96dbf8;}
+	#prodsum tr:nth-child(odd){background-color: #45b4c6;} */
+	#scrap_cat tr:hover {background-color: #ddd;}
+	#scrap_cat th {
+		padding-bottom: 4px;
+		text-align: left;
+		background-color: rgb(68, 82, 91);
+		color: white;
+	}
+</style>
+
 
 <script>
 	function myFunction() {
