--- a/trakberry/templates/scrap_mgmt_category_shift.html
+++ b/trakberry/templates/scrap_mgmt_category_shift.html
@@ -2,9 +2,8 @@
 
 
 {% block content %}
-<!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
-<table class="center">
+<table id="scrap_display">
 	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Part: {{request.session.scrap_24hrs_part}}
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		Operation: {{request.session.scrap_24hrs_operation}}
@@ -15,29 +14,21 @@
 		<th>Date</th>
 		<th>Amount Scrap</th>
 		<th>Cost</th>
-		<!-- <th>Scrap Cost</th> -->
 	</tr>
 	{% for i in request.session.tmp_scrap2 %}
 	<tr>
-		
 		<td>
-			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			{{i.4}}
-
+			<a href="{{request.session.local_toggle}}/scrap_display_entry_edit/get/{{ i.5 }}">{{i.4}}</a>
 		</td>
 		<td>
-			{{i.0}}
+			<a href="{{request.session.local_toggle}}/scrap_display_entry_edit/get/{{ i.5 }}">{{i.0}}</a>
 		</td>
 		<td>
-		 $ {{i.3}}</a>
+			<a href="{{request.session.local_toggle}}/scrap_display_entry_edit/get/{{ i.5 }}">$ {{i.3}}</a>
 		</td>
-		<!-- <td>
-			<div contenteditable="true">{{i.6}}</div>
-		</td> -->
 	</tr>
 	
 {% endfor %}
-
 </table>
 
 
