--- a/trakberry/templates/scrap_mgmt_operation.html
+++ b/trakberry/templates/scrap_mgmt_operation.html
@@ -4,7 +4,7 @@
 {% block content %}
 <!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
-<table class="center">
+<table id="scrap_display">
 	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Part: {{request.session.scrap_24hrs_part}}</b></u></font></th></tr>
 	<tr>
 		<th>Operation</th>
