--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -57,13 +57,13 @@
 									</li>
 									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 
-									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits<b class="caret"></b></a>
+									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits <b><mark>(** New ! **)</mark></b><b class="caret"></b></a>
 										<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
 
 
 
 											<!-- <li><a href="{{request.session.local_toggle}}/scrap_entries">Entries</a></li> -->
-											<li><a href="{{request.session.local_toggle}}/scrap_edit_categories_reset">Edit Scrap Categories <b><mark>(** New ! **)</mark></b></a></li>
+											<li><a href="{{request.session.local_toggle}}/scrap_edit_categories_reset">Edit Scrap Categories</a></li>
 
 
 
