Added the 10R60 OP30 tracking

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -16,6 +16,8 @@
 		function R9341(){location.replace("{{request.session.local_toggle}}/chart2_9341")}
 		function L0455(){location.replace("{{request.session.local_toggle}}/chart1_0455")}
 		function R0455(){location.replace("{{request.session.local_toggle}}/chart2_0455")}
+		function L045530(){location.replace("{{request.session.local_toggle}}/chart1_0455_OP30")}
+		function R045530(){location.replace("{{request.session.local_toggle}}/chart2_0455_OP30")}
 		function L1467(){location.replace("{{request.session.local_toggle}}/chart1_1467")}
 		function R1467(){location.replace("{{request.session.local_toggle}}/chart2_1467")}
 		function L3050(){location.replace("{{request.session.local_toggle}}/chart1_3050")}
@@ -363,6 +365,8 @@
 	<button onclick="L9341110()">Left</button> </td><td> (9341 OP110) </td><td> <button onclick="R9341110()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L0455()">Left</button></td><td>  (0455 INSP) </td><td> <button onclick="R0455()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L045530()">Left</button></td><td>  (0455 OP30) </td><td> <button onclick="R045530()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L521430()">Left</button> </td><td> (5214 OP30) </td><td> <button onclick="R521430()">Right</button>
 </td></tr><tr><td>
