working on manpower allocation section

--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -102,6 +102,8 @@
 		.wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
 		
 		.frame1 {color:black;text-align:center;float:left;width:32%;margin-bottom: 5px;}
+		.frame2a{color:black;text-align:center;background:rgb(202, 188, 83);float:left;width:32%;position:relative;left:5px;border-radius: 15px;margin-bottom: 5px;}
+
 		.frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
 		.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:32%;position:relative;left:10px;margin-bottom: 5px;}
 		.frame4 {color:black;text-align:center;float:left;width:90%;position:relative;left:10px;margin-bottom: 5px;margin-top: 15px;}
