--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -114,6 +114,7 @@
 								<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 									<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
 										<!-- <li><a href="{{request.session.local_toggle}}/production_entry_check_manual">Production Check Manual</a></li> -->
+										<li><a href="{{request.session.local_toggle}}/manpower_allocation_interval_pick">Check Manower</a></li>
 										<li><a href="{{request.session.local_toggle}}/manpower_allocation">Test</a></li>
 										<li class="dropdown-submenu">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown">Production Verification</a>
