--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -358,7 +358,7 @@
 </td></tr><tr><td>
 	<button onclick="L9341()">Left</button> </td><td> (9341 INSP) </td><td> <button onclick="R9341()">Right</button>
 </td></tr><tr><td>
-	<button onclick="L934130()">Left</button> </td><td> (9341 OP30) </td><td> <button onclick="R934130()">Right</button>
+	<button onclick="L934130()">Left</button> </td><td>(1539) | (1502)</td><td> <button onclick="R934130()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L934180()">Left</button> </td><td> (9341 OP80)</td><td>  <button onclick="R934180()">Right</button>
 </td></tr><tr><td>
