updated Brandon for op30 tracking

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -32,6 +32,14 @@
 		function R5710b(){location.replace("{{request.session.local_toggle}}/chart2_5710b")}
 		function L934130(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP30")}
 		function R934130(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP30")}
+
+		function L93411502(){location.replace("{{request.session.local_toggle}}/chart1_1502")}
+		function R93411502(){location.replace("{{request.session.local_toggle}}/chart2_1502")}
+		function L93411507(){location.replace("{{request.session.local_toggle}}/chart1_1507")}
+		function R93411507(){location.replace("{{request.session.local_toggle}}/chart2_1507")}
+		function L93411539(){location.replace("{{request.session.local_toggle}}/chart1_1539")}
+		function R93411539(){location.replace("{{request.session.local_toggle}}/chart2_1539")}
+
 		function L934180(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP80")}
 		function R934180(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP80")}
 		function L9341110(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP110")}
@@ -357,9 +365,17 @@
 	<button onclick="L5710b()">Left</button> </td><td> (5710 Broach)</td><td>  <button onclick="R5710b()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L9341()">Left</button> </td><td> (9341 INSP) </td><td> <button onclick="R9341()">Right</button>
+
 </td></tr><tr><td>
-	<button onclick="L934130()">Left</button> </td><td>(1539) | (1502)</td><td> <button onclick="R934130()">Right</button>
+	<button onclick="L934130()">Left</button> </td><td>(9341 OP30)</td><td> <button onclick="R934130()">Right</button>
+	</td></tr><tr><td>
+		<button onclick="L93411502()">Left</button> </td><td>(9341 [1502])</td><td> <button onclick="R93411502()">Right</button>
+		</td></tr><tr><td>	
+	<button onclick="L93411507()">Left</button> </td><td>(9341 [1507])</td><td> <button onclick="R93411507()">Right</button>
 </td></tr><tr><td>
+	<button onclick="L93411539()">Left</button> </td><td>(9341 [1539])</td><td> <button onclick="R93411539()">Right</button>
+	</td></tr><tr><td>
+
 	<button onclick="L934180()">Left</button> </td><td> (9341 OP80)</td><td>  <button onclick="R934180()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L9341110()">Left</button> </td><td> (9341 OP110) </td><td> <button onclick="R9341110()">Right</button>
