--- a/trakberry/templates/maint.html
+++ b/trakberry/templates/maint.html
@@ -4,73 +4,73 @@
 
 <style type="text/css">
 
-#full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: ;  left: 0;}
+#full-screen-background-image {z-index: -999;min-height: 110%; min-width: 100%;width: 100%;height: 110%;position: fixed;top: ;	left: 0;}
 
 .multiple-borders {
   -webkit-box-shadow:
-            0px 0px 0px 2px rgba(0,0,0,0.6),
-                0px 0px 0px 14px #fff,
-                0px 0px 0px 18px rgba(0,0,0,0.2),
-                6px 6px 8px 17px #555;
+			0px 0px 0px 2px rgba(0,0,0,0.6),
+				0px 0px 0px 14px #fff,
+				0px 0px 0px 18px rgba(0,0,0,0.2),
+				6px 6px 8px 17px #555;
    
-     -moz-box-shadow:
-            0px 0px 0px 2px rgba(0,0,0,0.6),
-                0px 0px 0px 14px #fff,
-                0px 0px 0px 18px rgba(0,0,0,0.2),
-                6px 6px 8px 17px #555;
+	 -moz-box-shadow:
+			0px 0px 0px 2px rgba(0,0,0,0.6),
+				0px 0px 0px 14px #fff,
+				0px 0px 0px 18px rgba(0,0,0,0.2),
+				6px 6px 8px 17px #555;
    
-          box-shadow:
-            0px 0px 0px 2px rgba(0,0,0,0.6),
-                0px 0px 0px 14px #fff,
-                0px 0px 0px 18px rgba(0,0,0,0.2),
-                6px 6px 8px 17px #555;
-}   
+		  box-shadow:
+			0px 0px 0px 2px rgba(0,0,0,0.6),
+				0px 0px 0px 14px #fff,
+				0px 0px 0px 18px rgba(0,0,0,0.2),
+				6px 6px 8px 17px #555;
+}	
 .dropdown-submenu {
-    position: relative;
+	position: relative;
 }
 
 .dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
+	top: 0;
+	left: 100%;
+	margin-top: -6px;
+	margin-left: -1px;
+	-webkit-border-radius: 0 6px 6px 6px;
+	-moz-border-radius: 0 6px 6px;
+	border-radius: 0 6px 6px 6px;
 }
 
 .dropdown-submenu:hover>.dropdown-menu {
-    display: block;
+	display: block;
 }
 
 .dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: -10px;
+	display: block;
+	content: " ";
+	float: right;
+	width: 0;
+	height: 0;
+	border-color: transparent;
+	border-style: solid;
+	border-width: 5px 0 5px 5px;
+	border-left-color: #ccc;
+	margin-top: 5px;
+	margin-right: -10px;
 }
 
 .dropdown-submenu:hover>a:after {
-    border-left-color: #ff;
+	border-left-color: #ff;
 }
 
 .dropdown-submenu.pull-left {
-    float: none;
+	float: none;
 }
 
 .dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
+	left: -100%;
+	margin-left: 10px;
+	-webkit-border-radius: 6px 0 6px 6px;
+	-moz-border-radius: 6px 0 6px 6px;
+	border-radius: 6px 0 6px 6px;
 	
 
 
@@ -88,24 +88,24 @@
 
 
 {% if request.session.bounce2 == 1 %} 
-    <script type="text/javascript">
-	    $(document).ready(function(){
-	    $("#myModal").modal('show');
-	    });
+	<script type="text/javascript">
+		$(document).ready(function(){
+		$("#myModal").modal('show');
+		});
 	</script>
 {% endif %}
 
 <style>
-    {% if request.session.bounce2 == 1 %} 
-        .modal-body
-        {background-color: rgb(223, 216, 172);}
-        .modal-header
-        {background-color: rgb(207, 201, 163);}
-        .modal-footer
-        {background-color: rgb(207, 201, 163);}
-        .modal 
-        {border-radius: 25px; }
-    {% endif %}
+	{% if request.session.bounce2 == 1 %} 
+		.modal-body
+		{background-color: rgb(223, 216, 172);}
+		.modal-header
+		{background-color: rgb(207, 201, 163);}
+		.modal-footer
+		{background-color: rgb(207, 201, 163);}
+		.modal 
+		{border-radius: 25px; }
+	{% endif %}
 </style>
 
 </head>
@@ -133,19 +133,19 @@
 
 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
 			<font color="#ffffff" size ="3"><b>Maint App</b></b></font>
-			<img src="{{request.session.login_image}}"  style="border-radius: 25px;" height="60" width="70">
-            <a class="navbar-brand" href="#" style="position:absolute;left:0px;top:-10px;"></a>
-        </div>
-        <div class="collapse navbar-collapse">
+			<img src="{{request.session.login_image}}"	style="border-radius: 25px;" height="60" width="70">
+			<a class="navbar-brand" href="#" style="position:absolute;left:0px;top:-10px;"></a>
+		</div>
+		<div class="collapse navbar-collapse">
 			{% if request.session.login_maint_check %}
 				<ul class="nav navbar-nav">
 			
@@ -163,10 +163,10 @@
 			<li><font color="#ffffff" size ="2">Welcome: <u>{{request.session.login_maint}}</u></li>
 			<li><a href="{{request.session.local_toggle}}/maint_logout" style="color:#47889E"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
 							
-            </ul>
+			</ul>
 			
-        </div>
-    </div>
+		</div>
+	</div>
 </div>
 <br><br>
 <br><br><br>
@@ -189,7 +189,6 @@
 			<div class="col-sm-4" style="background-color: #F98E51;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
 				<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
 			</div>
-
 			<div class="col-sm-4" style="background-color: #FFE8DA;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
 			<center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center>
 			</div>
@@ -198,44 +197,49 @@
 
 	
 {% elif i.3 == E %}
-    <div class="row">
-		<!-- <div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">
-			{{i.0}} : {{ i.1}}</div> -->
-			{% if i.1|slice:"-3:" != wfp %}
-			<div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
-				{{i.0}} : {{ i.1 }}</div> 
-			
-	</div>	
-    <div class="row">
-		
-		<div class="col-sm-8" style="background-color: rgb(216, 213, 173);border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
-		
-		<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
-		</div>
-		{% endif %}
-		
-	</div>
-
+	{% if i.1|slice:"-3:" != wfp %}
+		{% if i.1|slice:"-7:" != project %}
+			<div class="row">
+				<div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+					{{i.0}} : {{ i.1 }}
+				</div> 
+			</div>	
+			<div class="row">
+				<div class="col-sm-8" style="background-color: rgb(216, 213, 173);border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+					<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+				</div>
+			</div>
+		{% else %}
+			<div class="row">
+				<div class="col-sm-8" style="background-color: rgb(255, 184, 98);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+					{{i.0}} : {{ i.1 }}
+				</div> 
+			</div>	
+			<div class="row">
+				<div class="col-sm-8" style="background-color: rgb(192, 138, 74);border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+					<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+				</div>
+			</div>
+		{% endif %}	 <!-- end if for Project If Statement -->
+	{% endif %}	  <!-- end if for wfp If Statement -->
 {% else %}
-    <div class="row">
+	<div class="row">
 			{% if i.1|slice:"-3:" != wfp %}
 		<div class="col-sm-8" style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
 		
 	</div>	
-    <div class="row">
+	<div class="row">
 		
 		<div class="col-sm-4" style="background-color: #999999;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
 		
 		<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
 		</div>
 		<div class="col-sm-4" style="background-color: #DCDCDC;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
-        <!-- <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center> -->
-        <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center>
+		<!-- <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center> -->
+		<center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center>
 		</div>
 		{% endif %}
 	</div>
-
-
 {% endif %}
 
 
@@ -244,41 +248,41 @@
 </div>
 
 {% else %}
-    <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/maint_logout" />
+	<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/maint_logout" />
 {% endif %}
 
 
 <!-- Modal For Are you sure to Close -->
 <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content" >
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title"><mark><font color="#000000" size ="5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Warning
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></mark></h4>
-        </div>
-        <div class="modal-body" >
-          <font color="#000000" size ="4">
-              <p align="left">
-                  <b>You are about to close <br> this item out.</b><br><br>
-                  &nbsp;&nbsp;&nbsp;
-                  <button style="background-color: #AAAAAA;border-radius: 10px;width:62px;height:33px;font-weight: 500;font-size:14px;align=left;" 
-                  type="button" onclick="window.location.href = '{{request.session.local_toggle}}/maint_close_item';">OK</button>
-                  &nbsp;&nbsp;&nbsp;
-                  <button style="background-color: #AAAAAA;border-radius: 10px;width:62px;height:33px;font-weight: 500;font-size:14px;align=left;" 
-                  type="button" onclick="window.location.href = '{{request.session.local_toggle}}/maint';">Cancel</button>
-        </p>
-          </font>
-        </div>
-        <div class="modal-footer">
-          <p align="left">
-          <img src="/static/media/JELogo.gif?{{TCUR}}"  style="border-radius: 25px;" height="40" width="150">
-        </p>    
+	<div class="modal-dialog modal-sm">
+	  <div class="modal-content" >
+		<div class="modal-header">
+		  <button type="button" class="close" data-dismiss="modal">&times;</button>
+		  <h4 class="modal-title"><mark><font color="#000000" size ="5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			Warning
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></mark></h4>
+		</div>
+		<div class="modal-body" >
+		  <font color="#000000" size ="4">
+			  <p align="left">
+				  <b>You are about to close <br> this item out.</b><br><br>
+				  &nbsp;&nbsp;&nbsp;
+				  <button style="background-color: #AAAAAA;border-radius: 10px;width:62px;height:33px;font-weight: 500;font-size:14px;align=left;" 
+				  type="button" onclick="window.location.href = '{{request.session.local_toggle}}/maint_close_item';">OK</button>
+				  &nbsp;&nbsp;&nbsp;
+				  <button style="background-color: #AAAAAA;border-radius: 10px;width:62px;height:33px;font-weight: 500;font-size:14px;align=left;" 
+				  type="button" onclick="window.location.href = '{{request.session.local_toggle}}/maint';">Cancel</button>
+		</p>
+		  </font>
+		</div>
+		<div class="modal-footer">
+		  <p align="left">
+		  <img src="/static/media/JELogo.gif?{{TCUR}}"	style="border-radius: 25px;" height="40" width="150">
+		</p>	
 
-        </div>
-      </div>
-    </div>
+		</div>
+	  </div>
+	</div>
   </div>
 
 
