Changed some tracking titles

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -373,10 +373,10 @@
 		</td></tr><tr><td>	
 	<button onclick="L93411507()">Left</button> </td><td>(9341 [1507])</td><td> <button onclick="R93411507()">Right</button>
 </td></tr><tr><td>
-	<button onclick="L93411539()">Left</button> </td><td>(9341 [1539])</td><td> <button onclick="R93411539()">Right</button>
+	<button onclick="L93411539()">Left</button> </td><td>(1540) --- (1539)</td><td> <button onclick="R93411539()">Right</button>
 	</td></tr><tr><td>
 
-	<button onclick="L934180()">Left</button> </td><td> (9341 OP80)</td><td>  <button onclick="R934180()">Right</button>
+	<button onclick="L934180()">Left</button> </td><td> (1510) ---(1527)</td><td>  <button onclick="R934180()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L9341110()">Left</button> </td><td> (9341 OP110) </td><td> <button onclick="R9341110()">Right</button>
 </td></tr><tr><td>
