--- a/trakberry/templates/tech_login.html
+++ b/trakberry/templates/tech_login.html
@@ -20,16 +20,17 @@
 
 <b><u>Tech Name</b></u>&nbsp;
 <select name ="user">
-	<option value="Dan Deighton">Dan Deighton</option>
+	
 	<option value="Dave McLaren">Dave McLaren</option>
 	<option value="Derek Peachey">Derek Peachey</option>
 	<option value="Ervin Kuepfer">Ervin Kuepfer</option>
 	<option value="Jered Pankratz">Jered Pankratz</option>
 	<option value="James Kuepfer">James Kuepfer</option>
+	<option value="James Shipway">James Shipway</option>
 	<option value="Jonathan Brunk">Jonathan Brunk</option>
 	<option value="Jeremy Bourque">Jeremy Bourque</option>	
 	<option value="Jim Barker">Jim Barker</option>
-	<option value="Les Vaters">Les Vaters</option>
+	<option value="Karissa St.Pierre">Karissa St.Pierre</option>
 	<option value="Mayank Gehlot">Mayank Gehlot</option>
 	<option value="Muoi Le">Muoi Le</option>
 	<option value="Paul Wilson">Paul Wilson</option>
