Changed some of the tracking stuff

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -211,7 +211,7 @@
 	<input type="button" value="Close this window" onclick="windowClose();"> -->
 	
 	
-	<meta http-equiv="refresh" content="300; url={{request.session.local_toggle}}/tracking" />
+	<meta http-equiv="refresh" content="600; url={{request.session.local_toggle}}/tracking" />
 	
 	<div class="wrapper_main">
 	<div class="head1_u">
@@ -378,7 +378,7 @@
 
 	<button onclick="L934180()">Left</button> </td><td> (1510) ---(1527)</td><td>  <button onclick="R934180()">Right</button>
 </td></tr><tr><td>
-	<button onclick="L9341110()">Left</button> </td><td> (9341 OP110) </td><td> <button onclick="R9341110()">Right</button>
+	<button onclick="L9341110()">Left</button> </td><td> (1511) -- (1528) </td><td> <button onclick="R9341110()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L0455()">Left</button></td><td>  (0455 INSP) </td><td> <button onclick="R0455()">Right</button>
 </td></tr><tr><td>
