fixed the Tech App bug

--- a/trakberry/templates/tech.html
+++ b/trakberry/templates/tech.html
@@ -129,6 +129,8 @@
 	<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/tech" />
 {% endif %}
 
+
+{% block menu %}
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -170,6 +172,10 @@
         </div><!--/.nav-collapse -->
     </div>
 </div>
+
+{% endblock %}
+
+
 <br><br>
 <br><br><br>
 
