work done on PieChart EPV history button

--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="/static/style_1/maint_mgmt.css?{{request.session.TCUR}}">  <!-- include the proper styling -->
 
 
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+		<!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> -->
+		<script type="text/javascript" src="/static/style_1/loader.js"></script>
+
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
