--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -39,7 +39,7 @@
 												<ul class="dropdown-menu" style="background-color:#d3ded4;">
 													<li class="dropdown-submenu">
 	
-														<li><a href="{{request.session.local_toggle}}/pie_chart">CNC Tech EPV Report</a></li>
+														<li><a href="{{request.session.local_toggle}}/initial_epv">CNC Tech EPV Report</a></li>
 														<li><a href="{{request.session.local_toggle}}/quality_epv_asset_entry">EPVs By Asset</a></li>
 
 													</li>
