--- a/trakberry/templates/pie.html
+++ b/trakberry/templates/pie.html
@@ -4,13 +4,14 @@
 <div class ="mainset">
 	<div class="frame8"><center>
 		<font style="font-size: 35px; color:rgb(212, 212, 212); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
-		CNC Tech EPV Completion
-		</font>
+		CNC Tech EPV Completion</font>
+		<font style="font-size: 19px; color:rgb(212, 212, 212); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Week {{request.session.EPV_Week}}</font>
 		<br>
-		<button style="background-color: #98b49a;border-radius: 10px;width:130px;height:50px;font-weight: 600;" onclick="window.location.href='{{request.session.local_toggle}}/previous_epv';"><center><font color="#000000"> << Previous Week</font></center></button>
+		<button style="background-color: #7f9180;border-radius: 10px;width:130px;height:30px;font-weight: 600;" onclick="window.location.href='{{request.session.local_toggle}}/previous_epv';"><center><font color="#000000"> << Previous Week</font></center></button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		{% if request.session.direction5 != 0 %}
-		<button style="background-color: #98b49a;border-radius: 10px;width:130px;height:50px;font-weight: 600;" onclick="window.location.href='{{request.session.local_toggle}}/next_epv';"><center><font color="#000000"> Next Week >></font></center></button>
+		<button style="background-color: #7f9180;border-radius: 10px;width:130px;height:30px;font-weight: 600;" onclick="window.location.href='{{request.session.local_toggle}}/next_epv';"><center><font color="#000000"> Next Week >></font></center></button>
 		{% endif %}
 		<div id="piechart_3d" style="width: 70%; height: 500px;"></div>
 	</center>
