--- a/trakberry/templates/training_matrix2.html
+++ b/trakberry/templates/training_matrix2.html
@@ -158,7 +158,7 @@ th {
 
 					<th style="border:1px solid black;z-index: 95;font-size:70%;background-color: #b3b3b3;">
 					
-				{{item2.0.0}}
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{item2.0.0}}
 
 
 			</th>
