--- a/trakberry/templates/done_test2.html
+++ b/trakberry/templates/done_test2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-Finished but didn't go to loop  if then failed !
+<br><br>
+Finished update for TECH Names in EPV !
 
 </body>
 </html>
