updated EPV for tech todo name assignments

--- a/trakberry/templates/main.html
+++ b/trakberry/templates/main.html
@@ -342,6 +342,7 @@ function goBack() {
 						<li><a href="{{request.session.local_toggle}}/tech_history2">Downtime Search</a></li>
 						
 						<li><a href="{{request.session.local_toggle}}/vacation_display_initial">Vacations</a></li>
+						<li><a href="{{request.session.local_toggle}}/tech_epv_week_assign">EPV Tech Assignment<b><mark>(** New ! **)</mark></b></a></li>
 						<li><a href="{{request.session.local_toggle}}/sup_pie_chart">EPV Completion <b><mark>(** New ! **)</mark></b></a></li>
 						<li><a href="{{request.session.local_toggle}}/manual_production_entry">Production Entries</a></li>
 						
