--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -116,6 +116,7 @@
 										<!-- <li><a href="{{request.session.local_toggle}}/production_entry_check_manual">Production Check Manual</a></li> -->
 										<li><a href="{{request.session.local_toggle}}/manpower_allocation_interval_pick">Check Manower</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_epv_assign">Assign Tech EPV</a></li>
+										<li><a href="{{request.session.local_toggle}}/tech_epv_week_assign">Assign Tech EPV for the Week</a></li>
 										<li><a href="{{request.session.local_toggle}}/manpower_allocation">Test</a></li>
 										<li class="dropdown-submenu">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown">Production Verification</a>
