--- a/trakberry/templates/sup_pie.html
+++ b/trakberry/templates/sup_pie.html
@@ -14,7 +14,7 @@
 		
 		<table>
 			<tr>
-			<td style="font-size: 24px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);" colspan="3">
+			<td style="font-size: 24px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);" colspan="4">
 			<b>EPVs Not Completed</b>
 			</td>
 			</tr>
@@ -25,6 +25,8 @@
 					<b>Check</b></td>
 				<td style="font-size: 14px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
 					<b>Q Code</b></td>
+					<td style="font-size: 14px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
+						<b>CNC Tech</b></td>
 			</tr>
 			{% for i in request.session.epv_left %}
 			<tr>
@@ -34,6 +36,8 @@
 			{{i.4}} </td>
 			<td style="font-size: 14px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
 			{{i.2}}</td>
+			<td style="font-size: 14px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
+				{{i.8}}</td>
 		</tr>
 
 			{% endfor %}
