updated Chris Coakley in Tech App

--- a/trakberry/templates/tech_login.html
+++ b/trakberry/templates/tech_login.html
@@ -21,9 +21,8 @@
 
 <b><u>Tech Name</b></u>&nbsp;
 <select name ="user">
-	
+	<option value="Chris Coakley">Chris Coakley</option>
 	<option value="Dave McLaren">Dave McLaren</option>
-	<option value="Derek Peachey">Derek Peachey</option>
 	<option value="Ervin Kuepfer">Ervin Kuepfer</option>
 	<option value="Jered Pankratz">Jered Pankratz</option>
 	<option value="James Kuepfer">James Kuepfer</option>
