fixed the year bug in tracking

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -242,7 +242,7 @@
 	{{request.session.wd}} 
 	{{request.session.m}}
 	{{request.session.day}},
-	2020 
+	{{request.session.yr}}
 	</td><td style="border:1px solid black;">
 	{{request.session.shift}} Shift
 	</td></tr>
@@ -303,7 +303,7 @@
 	{{request.session.wd}} 
 	{{request.session.m}}
 	{{request.session.day}},
-	2020 
+	{{request.session.yr}}
 	</td><td style="border:1px solid black;">
 	{{request.session.shift}} Shift
 	</td></tr>
