--- a/trakberry/templates/tech.html
+++ b/trakberry/templates/tech.html
@@ -75,8 +75,9 @@
 }
 
 
-.frame1 {color:rgb(0, 0, 0);text-align:center;float:left;width:65%}
-.frame3 {color:rgb(0, 0, 0);text-align:center;float:left;width:35%}
+.frame1 {color:rgb(0, 0, 0);text-align:center;float:left;width:49%}
+.frame3 {color:rgb(0, 0, 0);text-align:center;float:left;width:25%}
+.frame5 {color:rgb(0, 0, 0);text-align:center;float:left;width:25%}
 .frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:20%;position:relative;left:5px;}
 .body1{color:black;text-align:left;background:rgb(197, 253, 186);border: .4px solid rgb(0, 0, 0);width:100%}
 
@@ -265,16 +266,17 @@
 {% else %}
 <!-- Frame3  for EPV List-->
 <div class="frame3" >
+  <br><br><br><br>
 	<div class="comment6"></div>
-	<div class="comment7" style="font-size:25px;box-shadow: 10px 10px;font-weight: bold;background-color: #b3fcff;border-radius: 15px;border-style: solid;border-width: 1px;border-color: #000000;">
-		<a href="{{request.session.local_toggle}}/tech_epv_back/" style="font-size:15px;background-color: #6fa1a3;border-radius: 10px;padding-left:6px;padding-right:6px;width:90%;height:80%;font-weight: 600;color:rgb(255, 251, 0);">
+	<div class="comment7" style="font-size:25px;box-shadow: 10px 10px;font-weight: bold;background-color: #e2a967;border-radius: 15px;border-style: solid;border-width: 1px;border-color: #000000;">
+		<a href="{{request.session.local_toggle}}/tech_epv_back/" style="font-size:15px;background-color: #a57c4d;border-radius: 10px;padding-left:6px;padding-right:6px;width:90%;height:80%;font-weight: 600;color:rgb(255, 251, 0);">
 			<<< Back</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EPV checks for {{request.session.tech_epv_qc}}</div>
 	<div class="comment6"></div>
 	<div class="comment5"></div>
 	{% for i in request.session.tech_epv_list2 %}
 	<div class="comment6"></div>
-	<div class="comment7" style="font-size:15px;font-weight: bold;background-color:#8ac8ca;border-style: solid;border-width: 1px;border-color: #000000;border-radius: 5px;padding-left: 5px;">
+	<div class="comment7" style="font-size:15px;font-weight: bold;background-color:#e2a967;border-style: solid;border-width: 1px;border-color: #000000;border-radius: 5px;padding-left: 5px;">
 		
 		Asset:({{i.7}}) &nbsp;&nbsp;&nbsp; Job:({{i.3}}) &nbsp;&nbsp;&nbsp; Desc:{{i.4}} &nbsp;&nbsp;&nbsp; Check{{i.5}} &nbsp;&nbsp;&nbsp;Master:{{i.6}} <br>
 		<a href="{{request.session.local_toggle}}/tech_epv_complete/get/{{i.0}}/" style="background-color: #dadada;border-radius: 10px;padding-left:3px;padding-right:3px;width:90%;height:80%;font-weight: 600;color:rgb(0, 0, 0);">Complete</a>
@@ -283,11 +285,54 @@
 	<div class="comment55"></div>
 	{% endfor %}
 </div><!-- Frame3 end -->
+{% endif %}
+
+
+<!-- List the CNC Tech PMs Due if any -->
+{% if request.session.tech_pm_second = 0 %}
+<div class="frame5" >
+	<br><br><br><br>
+	<div class="comment6"></div>
+	<div class="comment7" style="font-size:25px;box-shadow: 10px 10px;font-weight: bold;background-color: #faf9a8;border-radius: 15px;border-style: solid;border-width: 1px;border-color: #000000;"><center>PM Required</center></div>
+	<div class="comment6"></div>
+	<div class="comment5"></div>
+	{% for i in request.session.tech_pm_list %}
+	<div class="comment6"></div>
+	<div class="comment7" style="font-size:18px;font-weight: bold;background-color:#faf9a8;border-style: solid;border-width: 1px;border-color: #000000;border-radius: 5px;padding-left: 5px;">
+		<a href="{{request.session.local_toggle}}/tech_pm/get/{{ i.0 }}" style="color:rgb(0, 0, 0);">
+	<center>	{{i.0}}</center></a></div>
+	<div class="comment6"></div>
+	<div class="comment55"></div>
+	{% endfor %}
+</div>
+
+{% else %}
+<div class="frame5" >
+  <br><br><br><br>
+	<div class="comment6"></div>
+	<div class="comment7" style="font-size:25px;box-shadow: 10px 10px;font-weight: bold;background-color: #f5efde;border-radius: 15px;border-style: solid;border-width: 1px;border-color: #000000;">
+		<a href="{{request.session.local_toggle}}/tech_pm_back/" style="font-size:15px;background-color: #9c9379;border-radius: 10px;padding-left:6px;padding-right:6px;width:90%;height:80%;font-weight: 600;color:rgb(255, 251, 0);">
+			<<< Back</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PM checks for {{request.session.tech_pm_qc}}</div>
+	<div class="comment6"></div>
+	<div class="comment5"></div>
+	{% for i in request.session.tech_pm_list2 %}
+	<div class="comment6"></div>
+	<div class="comment7" style="font-size:15px;font-weight: bold;background-color:#f5efde;border-style: solid;border-width: 1px;border-color: #000000;border-radius: 5px;padding-left: 5px;">
+		
+		{{i.3}} &nbsp;&nbsp;&nbsp;  <br>
+		<a href="{{request.session.local_toggle}}/tech_pm_complete/get/{{i.0}}/" style="background-color: #c7c7c7;border-radius: 10px;padding-left:3px;padding-right:3px;width:90%;height:80%;font-weight: 600;color:rgb(0, 0, 0);">Complete</a>
+		</div>
+	<div class="comment6"></div>
+	<div class="comment55"></div>
+	{% endfor %}
+</div><!-- Frame3 end -->
+
+
 
 {% endif %}
 
-</div>
-
+<!-- End of Section -->
 {% endblock %}
 
 
