--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -335,7 +335,7 @@
 		{{i.1}}
 		{{i.2}}
 		{{i.3}},
-		2020 
+		{{request.session.yr}}
 		</a></td>
 		<td style="border:1px solid black;">
 		{{i.4}} Shift
