Work done on CNC Tech PMs.  Almost done

--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -46,6 +46,8 @@
 												</ul>
 											</li>
 
+											<li><a href="{{request.session.local_toggle}}/tech_pm_summary">CNC Tech PMs</a></li>
+
 										</ul>
 									</li>
 									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
