--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -117,6 +117,7 @@
 										<li><a href="{{request.session.local_toggle}}/manpower_allocation_interval_pick">Check Manower</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_PM_assign">Assign Tech PM</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_PM_master_complete">Complete Tech PM</a></li>
+										<li><a href="{{request.session.local_toggle}}/tech_pm_summary">Summary of Tech PM's</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_epv_assign">Assign Tech EPV</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_epv_week_assign">Assign Tech EPV for the Week</a></li>
 										<li><a href="{{request.session.local_toggle}}/manpower_allocation">Test</a></li>
