--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -114,13 +114,13 @@
 								<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 									<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
 										<!-- <li><a href="{{request.session.local_toggle}}/production_entry_check_manual">Production Check Manual</a></li> -->
-										<li><a href="{{request.session.local_toggle}}/manpower_allocation_interval_pick">Check Manower</a></li>
+										<!-- <li><a href="{{request.session.local_toggle}}/manpower_allocation_interval_pick">Check Manower</a></li> -->
 										<li><a href="{{request.session.local_toggle}}/tech_PM_assign">Assign Tech PM</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_PM_master_complete">Complete Tech PM</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_pm_summary">Summary of Tech PM's</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_epv_assign">Assign Tech EPV</a></li>
 										<li><a href="{{request.session.local_toggle}}/tech_epv_week_assign">Assign Tech EPV for the Week</a></li>
-										<li><a href="{{request.session.local_toggle}}/manpower_allocation">Test</a></li>
+										<!-- <li><a href="{{request.session.local_toggle}}/manpower_allocation">Test</a></li> -->
 										<li class="dropdown-submenu">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown">Production Verification</a>
 											<ul class="dropdown-menu" style="background-color:rgb(202,230,127);">
@@ -139,17 +139,17 @@
 										</li>
 										<li><a href="{{request.session.local_toggle}}/mgmt_priorities">Priorities</a></li>
 										<li><a href="{{request.session.local_toggle}}/tracking_10R80">Track 10R80</a></li>
-										<li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
+										<!-- <li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
 										<li><a href="{{request.session.local_toggle}}/production_entry_fix">Production Entry Fix</a></li>
 										<li><a href="{{request.session.local_toggle}}/prediction1">Prediction</a></li>
 										<li><a href="{{request.session.local_toggle}}/scrapdate_fix1">Fix Scrap Date</a></li>
 										<li><a href="{{request.session.local_toggle}}/scrap_backup">Scrap Backup</a></li>
 										<li><a href="{{request.session.local_toggle}}/scrap_restore">Scrap Restore</a></li>
 										<li><a href="{{request.session.local_toggle}}/manpower_update_v2">Manpower Update</a></li>
-										<li><a href="{{request.session.local_toggle}}/matrix_update_v2">Matrix Update</a></li>
+										<li><a href="{{request.session.local_toggle}}/matrix_update_v2">Matrix Update</a></li> -->
 										<li><a href="{{request.session.local_toggle}}/tracking">TRACK</a></li>
 										<li><a href="{{request.session.local_toggle}}/training_matrix3">Matrix</a></li>
-										<li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
+										<!-- <li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
 										<li class="dropdown-submenu">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown">Excel Dump</a>
 											<ul class="dropdown-menu"  style="background-color:rgb(202, 230, 127);">
@@ -160,13 +160,14 @@
 										 			<li><a href="{{request.session.local_toggle}}/excel_scrap_dump">Dump Excel Scrap Sheets</a></li> 
 												</li>
 											</ul>
-										</li>  
+										</li>   -->
 										<li><a href="/switch_local">Switch to Local Deployment</a></li>
 										<li><a href="/trakberry/switch_net">Switch to Server Deployment</a></li>
-										<li><a href="{{request.session.local_toggle}}/create_table_1">Create DB</a></li> 
+										<!-- <li><a href="{{request.session.local_toggle}}/create_table_1">Create DB</a></li> 
 										<li><a href="{{request.session.local_toggle}}/medium_production">Generate Medium Production</a></li> 
 										<li><a href="{{request.session.local_toggle}}/auto_updater">Auto Updater</a></li> 
-										<li><a href="{{request.session.local_toggle}}/trained_email">Trained Email</a></li> 
+										<li><a href="{{request.session.local_toggle}}/trained_email">Trained Email</a></li>  -->
+										<li><a href="{{request.session.local_toggle}}/epv_cleanup">EPV Clean</a></li>
 									</ul>  
 								</li>
 
