--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -167,7 +167,8 @@
 										<li><a href="{{request.session.local_toggle}}/medium_production">Generate Medium Production</a></li> 
 										<li><a href="{{request.session.local_toggle}}/auto_updater">Auto Updater</a></li> 
 										<li><a href="{{request.session.local_toggle}}/trained_email">Trained Email</a></li>  -->
-										<li><a href="{{request.session.local_toggle}}/epv_cleanup">EPV Clean</a></li>
+										<!-- <li><a href="{{request.session.local_toggle}}/epv_cleanup">EPV Clean</a></li> -->
+										<li><a href="{{request.session.local_toggle}}/epv_checks_update">EPV Check Update</a></li>
 									</ul>  
 								</li>
 
