updated Email to Jim and I to show Magna

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -165,6 +165,7 @@
 										<li><a href="/trakberry/switch_net">Switch to Server Deployment</a></li>
 										<!-- <li><a href="{{request.session.local_toggle}}/create_table_1">Create DB</a></li>  -->
 										<li><a href="{{request.session.local_toggle}}/medium_production">Generate Medium Production</a></li> 
+										<li><a href="{{request.session.local_toggle}}/track_email">Track Email</a></li> 
 										<!-- <li><a href="{{request.session.local_toggle}}/auto_updater">Auto Updater</a></li> 
 										<li><a href="{{request.session.local_toggle}}/trained_email">Trained Email</a></li>   -->
 										<!-- <li><a href="{{request.session.local_toggle}}/epv_cleanup">EPV Clean</a></li>
